# atelier-ui

./: .eslintrc  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json  rollup.config.js  tauri.conf.js
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs-report.md  feature_request.md
editor/: Cargo.toml  How to theme.txt  Web.toml  build.sh  tauri.conf.js
editor-testing-project/: Amethyst.toml  Cargo.toml  README.md
editor-testing-project/resources/: display.ron
editor-testing-project/src/: main.rs  state.rs
editor/src/: lib.rs
editor/src-tauri/: .gitignore  tauri.js
editor/static/: index.html  index.js  mime.types
editor/ui/: README.md  index.html  package-lock.json  package.json  webpack.config.js
editor/uikit/: README.md  package.json  themes.json
public/img/: dot.png~
server/: Cargo.toml
server/src/: command_handler.rs  constants.rs  http_server.rs  main.rs
src/: App.svelte  colors.svelte  global.scss  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs
src/editor/: E_App_Nav.svelte  E_Button.svelte  E_Context_Menu.svelte  E_Dock.svelte  (+8 more)
testing-project/: Cargo.toml
ui/: README.md  package.json  quasar.conf.js  quasar.extensions.json  tauri.conf.js
ui/src-tauri/: Cargo.toml  config.json
ui/src-tauri/src/: amethyst_project.rs  main.rs
ui/src-tauri/src/amethyst/: amethyst_project.rs  editor_locals.rs
webview/: Cargo.toml
yew_editor/: Cargo.toml
yew_server/: Cargo.toml
yew_web_view/: Cargo.toml
(+85 files in other folders)
