[package]
name = "editor-pong"
version = "0.1.0"
authors = ["MrAlve <mralve@amethyst-engine.org>", "Daniel Thompson-Yvetot <denjell@quasar.dev>"]
edition = "2018"
description = "PONG!"

[dependencies]
amethyst = "0.13.0"
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
nightly = ["amethyst/nightly"]
