[package]
name = "editor"
version = "0.1.0"
description = "The official Amethyst editor."
author = [ "mralve <mralve@amethyst-engine.org>" ]
license = ""
repository = ""
default-run = "app"

[package.metadata.bundle]
identifier = "com.tauri.dev"
icon = [
  "icons/32x32.png",
  "icons/128x128.png",
  "icons/128x128@2x.png",
  "icons/icon.icns",
  "icons/icon.ico"
]

[dependencies]
serde_json = "1.0.39"
serde = "1.0"
serde_derive = "1.0"
tiny_http = "0.6"
phf = "0.7.21"
includedir = "0.5.0"

  [dependencies.tauri]
  path = "../node_modules/@tauri-apps/tauri/lib/rust"
  features = [ "edge", "all-api" ]

  [dependencies.tauri-ui]
  path = "../node_modules/@tauri-apps/tauri/bindings/rust"

[features]
dev = [ "tauri/dev" ]
embedded-server = [ "tauri/embedded-server" ]

[[bin]]
name = "updater"
path = "src/updater.rs"

[[bin]]
name = "app"
path = "src/main.rs"
